recipes-connectivity/canary-firewall/files/firewall.rules
# Generated by iptables-save v1.6.2 on Sat Sep 22 05:49:14 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [532:59533]
-A INPUT -s #ALLOWED_HOST#/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --sport 123 --dport 123 -j ACCEPT
-A INPUT -s #DNS_SERVER#/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A INPUT -s #DHCP_SERVER#/32 -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -s 0.0.0.0/32 -d 224.0.0.1/32 -p igmp -j DROP
-A INPUT -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "iptables:"
-A INPUT -j DROP
COMMIT
# Completed on Sat Sep 22 05:49:14 2018
